# what

./: CMakeLists.txt  README.md
include/: utils.h  what.h
src/: utils.c  what.c
tests/: test_what.c
